Remove assert failure expectations after r284846 landed https://bugs.webkit.org/show_bug.cgi?id=232048 <rdar://problem/84479642> https://bugs.webkit.org/show_bug.cgi?id=232102 <rdar://problem/84521189> https://bugs.webkit.org/show_bug.cgi?id=231255 <rdar://problem/83903881> https://bugs.webkit.org/show_bug.cgi?id=231431 <rdar://problem/84029425>

Unreviewed test gardening.

Depends on this fix: https://trac.webkit.org/changeset/284846/webkit


Source/WebKit:

* NetworkProcess/NetworkSession.cpp:
(WebKit::NetworkSession::setPrivateClickMeasurementAppBundleIDForTesting):
    Removed comment with Bugzilla reference.
    I decided to keep the logging since it was so useful in finding the root
    cause of the assertion crashes. Logging is only triggered when we will
    fail the assertion.

LayoutTests:

* platform/ios-wk2/TestExpectations:
    Removed crash expectations now that the app bundle ID setting for InAppBrowserPrivacy
    API tests is being cleared after each test.


Canonical link: https://commits.webkit.org/243525@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284848 268f45cc-cd09-0410-ab3c-d52691b4dbfc